# aerosync

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  app_controller.rs  formatting.rs  main.rs  style.css  view_models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  main.rs  syncthing.rs
src/backend/: downloader.rs  mod.rs  models.rs  syncthing.rs
ui/: app.slint
