[package]
name = "aerosync"
version = "0.1.0"
description = "A modern high-performance Syncthing client."
authors = ["AeroSync Contributors"]
license = "AGPL-3.0-only"
repository = ""
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
directories = "6.0.0"
flate2 = "1.1.9"
image = "0.25"
open = "5.3"
quick-xml = "0.40.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.8", features = ["renderer-winit-skia", "renderer-winit-skia-vulkan"] }
sysinfo = "0.33"
tar = "0.4.46"
tokio = { version = "1", features = ["full"] }
zip = "8.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
tray-icon = { version = "0.24.0", default-features = false, features = ["gtk"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = { version = "0.24.0", default-features = false }

[build-dependencies]
slint-build = "1.8"
