[package]
name = "aerosync"
version = "0.1.0"
description = "A modern high-performance Syncthing client."
authors = ["AeroSync Contributors"]
license = "AGPL-3.0-only"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
